Do an experiment with polymorphic variants

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A Graph Visualization Framework in ReasonML",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "bsb -clean-world",
+    "build": "bsb -make-world",
+    "watch": "bsb -make-world -w",
+    "demo": "parcel ./demos/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,6 +27,14 @@
   },
   "homepage": "https://github.com/tienle/reason-viz#readme",
   "devDependencies": {
-    "bs-platform": "^6.0.1"
+    "bs-platform": "^6.0.1",
+    "bsb-js": "^1.1.7",
+    "parcel-bundler": "^1.12.3",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "reason-react": ">=0.7.0"
+  },
+  "dependencies": {
+    "@antv/g": "^3.4.4"
   }
 }
