--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,17 +1,26 @@
 {
   "name": "reason-viz",
   "version": "0.1.0",
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
+  "reason": {
+    "react-jsx": 3
   },
+  "sources": [
+    {
+      "dir": "demos",
+      "type": "dev"
+    },
+    {
+      "dir" : "src",
+      "subdirs" : true
+    }
+  ],
   "package-specs": {
     "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-      // add your bs-dependencies here 
+    "reason-react"
   ],
   "warnings": {
     "error" : "+101"
