--- a/bsconfig.json
+++ b/bsconfig.json
@@ -10,6 +10,10 @@
       "type": "dev"
     },
     {
+      "dir": "__tests__",
+      "type": "dev"
+    },
+    {
       "dir" : "src",
       "subdirs" : true
     }
@@ -22,6 +26,7 @@
   "bs-dependencies": [
     "reason-react"
   ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
     "error" : "+101"
   },
